--- a/src/Styles/Banner/Footer/footer.css
+++ b/src/Styles/Banner/Footer/footer.css
@@ -1,17 +1,20 @@
 footer {
     background-color: #000000;
+    
+}
+
+footer figure {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-
 .footer-img {
     width: 93px;
     padding: 42px 0px 6px 0px;  
 }
 
-.footer-titleH3 {
+.footer-text {
     color: #ffff;
-    size: 24px;
+    font-size: 18px;
     font-weight: 500;
 }
