--- a/src/Styles/Banner/Header/header.css
+++ b/src/Styles/Banner/Header/header.css
@@ -3,12 +3,11 @@ header {
     flex-wrap: wrap;
     flex-direction: row;
     justify-content: space-between;
-    margin: 40px 100px;
+    margin: 3% 5%;
 }
 
 .header-img {
-    width: 210px;
-    height: 68px;
+    width: 14%;
 }
 
 .headerNav {
@@ -19,7 +18,6 @@ header {
 
 .headerNav-lien {
     color: #FF6060;
-    text-decoration: none;
     margin-left: 60px;
     font-size: 24px;
     font-weight: 500;
