--- a/src/Styles/Card/card-responsive.css
+++ b/src/Styles/Card/card-responsive.css
@@ -1,27 +1,35 @@
-/***************Version Desktop***************/
-@media screen and (max-width:1892px) {
-    .home-display a::before {
-        width: 25%;
-    }
+/**************Version Desktop**************/
+
+@media screen and (max-width:1610px) {
     .home-display a {
-        width: 29%;
-    }    
-}
-@media screen and (max-width:1650px){
-    .home-display a::before {
-        width: 24.7%;
+        width: 29.3%;
+        margin: 2%;
+    }
+    .home-display a::before{
+        height: 320px;
+        width: 25.3%;
+    }
+    .home-imgListLogement{
+        height: 320px;
+    }
+    .home-display h5 {
+        height: 38px;
     }
 }
 @media screen and (max-width:1505px) {
-    .home-display a::before {
-        width: 23.4%;
-        height: 62.5%;
+    .section-listAppartement ul {
+        padding: 1%;
     }
     .home-display a {
-        width: 28%;
+        width: 29%;
+        margin: 2%;
+    }
+    .home-display a::before {
+        width: 25.6%;
+        height: 293px;
     }
     .home-imgListLogement {
-        height: 250px;
+        height: 294px;
     }
     .home-display h5 {
         max-width: 194px;
@@ -31,29 +39,31 @@
 }
 @media screen and (max-width: 1340px) {
     .home-display a::before {
-        width: 23%;
-        height: 62%;
+        height: 247px;
     }
     .home-display a {
-        width: 28%;
+        width: 29%;
     }
     .home-imgListLogement {
-        height: 246px;
+        height: 248px;
     }
     .home-display h5 {
-        font-size: 16px;
+        font-size: 13px;
+        max-width: 172px;
         margin: -55px 0px 0px 20px;
     }
 }
-/**************Version Tablette**************/
+/**************Version Tablette (1279px)**************/
 
 @media screen and (max-width: 1279px) {
+    .section-listAppartement ul {
+        padding: 2%;
+    }
     .home-display a::before {
-        width: 36%;
-        height: 62.3%;
+        width: 39.7%;
     }
     .home-display a {
-        width: 44%;
+        width: 46%;
     }
     .home-imgListLogement {
         height: 248px;
@@ -63,68 +73,33 @@
         max-width: 222px;
     }
 }
-@media screen and (max-width: 1192px) {
-    .home-display a::before {
-        width: 35.5%;
-    }
-}
-@media screen and (max-width: 1142px) {
-    .home-display a{
-        width: 43%;
-    }
-    .home-display a::before {
-        width: 34.5%;
-    }
-}
-@media screen and (max-width: 1108px) {
-    .home-display a{
-        width: 42%;
-    }
-    .home-display a::before {
-        width: 33%;
+@media screen and (max-width:1040px) {
+    .home-display h5 {
+        font-size: 14px;
+        max-width: 190px;
     }
 }
 @media screen and (max-width:968px) {
-    .home-display a {
-        width: 41.8%;
-    }
-    .home-display a::before {
-        width: 32%;
-    }
     .home-display h5 {
         font-size: 12px;
         max-width: 168px;
     }
 }
-@media screen and (max-width:890px){
-    .home-display a {
-        width: 41%;
-    }
-    .home-display a::before {
-        width: 31%;
-    }
-}
 @media screen and (max-width:829px){
-    .home-display a {
-        width: 40%;
-    }
+
     .home-display a::before{
-        width: 29.5%;
+        width: 39.7%;
     }
 }
 
-/***********Version Mobile***********/
+/**************Version Mobile (768px)**************/
 @media screen and (max-width:768px) {
-    .titre-h1 {
-        text-align: left;
-        top: -170px;
-        left: 6%;
-        max-width: 414px;
-        font-size: 44px;
-    }
     .section-listAppartement {
         background: none;
         border: none;
+        padding: 0;
+    }
+    .section-listAppartement ul {
         padding: 0;
     }
     .home-display {
@@ -133,60 +108,51 @@
     }    
     .home-display a {
         width: 100%;
-        margin: 0px 0px 76px 0px;
+        margin: 0px 0px 40px 0px;
     }
     .home-display a::before {
-        width: 88%;
-        height: 248px;
+        width: 90%;
+        height: 384px;
+    }
+    .home-imgListLogement {
+        height: 384px;
     }
     .home-display h5 {
         font-size: 14px;
         max-width: 193px;
     }
 }
-@media screen and (max-width:740px) {
-    .home-display a::before {
-        width: 87%;
-    }
-}
-@media screen and (max-width:690px){
-    .home-display a::before {
-        width: 86%;
-    }
-}
-@media screen and (max-width:620px){
-    .home-display a::before {
-        width: 85%;
-    }
-}
-@media screen and (max-width:590px){
-    .home-display a::before {
-        width: 84%;
-    }
-}
-@media screen and (max-width:550px) {
-    .home-display a::before {
-        width: 83%;
-    }
-}
 @media screen and (max-width:520px) {
     .home-display a::before {
-        width: 82%;
+        height: 308px;
+    }
+    .home-imgListLogement {
+        height: 308px;
     }
 }
-@media screen and (max-width:470px) {
+@media screen and (max-width:430px) {
     .home-display a::before {
-        width: 80%;
+        height: 254px;
+    }
+    .home-imgListLogement {
+        height: 254px;
+    }
+    .home-display h5 {
+        max-width: 159px;
+        font-size: 12px;
     }
 }
-@media screen and (max-width:420px) {
+
+@media screen and (max-width:390px) {
     .home-display a::before {
-        width: 78%;
+        height: 210px;
     }
-}
-@media screen and (max-width:380px) {
-    .home-display a::before {
-        width: 76%;
+    .home-imgListLogement {
+        height: 210px;
+    }
+    .home-display h5 {
+        font-size: 12px;
+        max-width: 159px;
     }
 }
 @media screen and (max-width:360px) {
@@ -194,30 +160,45 @@
         height: 206px;
     }
     .home-display a::before {
-        width: 73%;
         height: 207px;
     }
     .home-display h5 {
         font-size: 10px;
-        max-width: 158px;
+        max-width: 132px;
+    }
+}
+@media screen and (max-width:350px) {
+    .home-imgListLogement {
+        height: 186px;
+    }
+    .home-display a::before {
+        height: 186px;
+    }
+    .home-display h5 {
+        font-size: 10px;
+        max-width: 132px;
     }
 }
 @media screen and (max-width:330px) {
     .home-display a::before {
-        width: 71%;
+        height: 164px;
+    }
+    .home-imgListLogement {
+        height:164px
     }
 }
-@media screen and (max-width:315px) {
-    .home-display a::before {
-        width: 69%;
+@media screen and (max-width:320px) {
+    .home-display h5 {
+        margin: -46px 0px 0px 16px;
+        height: 40px;
     }
+    .home-display a {
+        margin-bottom: 15px;
+    }
+    
 }
 @media screen and (max-width:300px) {
-    .home-display a {
-        margin-bottom: 48px;
-    }
     .home-display a::before {
-        width: 68%;
         height: 150px;
     }
     .home-imgListLogement {
