--- a/src/Styles/GlobalStyle/globalStyle-responsive.css
+++ b/src/Styles/GlobalStyle/globalStyle-responsive.css
@@ -1,5 +1,5 @@
-@media screen and (max-width:768px) {
+/* @media screen and (max-width:768px) {
     main {
         margin: 60px 46px;
     }
-}
+} */
