--- a/src/Styles/Home/home.css
+++ b/src/Styles/Home/home.css
@@ -1,4 +1,4 @@
-.home-img {
+.home img {
     width: 100%;
     height: 223px;
     object-fit: cover;
@@ -6,11 +6,14 @@
     border-radius: 25px;
 }
 
-.home-title {
-    color: white;
-    text-align: center;
+.home figcaption {    
     position: relative;
-    top: -173px;
+    top: -142px;
+}
+.home h1 {
+    color: white;
+    margin: 0;
+    text-align: center;
     font-weight: 500;
-    font-size:48px;
+    font-size: 48px;
 }
