--- a/src/Styles/Card/card-responsive.css
+++ b/src/Styles/Card/card-responsive.css
@@ -1,13 +1,12 @@
 /**************Version Desktop**************/
 
 @media screen and (max-width:1610px) {
-    .home-display a {
-        width: 29.3%;
-        margin: 2%;
+    .home-display {
+        margin: 1.5% 1%;
     }
     .home-display a::before{
         height: 320px;
-        width: 25.3%;
+        width: 27%;
     }
     .home-imgListLogement{
         height: 320px;
@@ -17,15 +16,8 @@
     }
 }
 @media screen and (max-width:1505px) {
-    .section-listAppartement ul {
-        padding: 1%;
-    }
-    .home-display a {
-        width: 29%;
-        margin: 2%;
-    }
     .home-display a::before {
-        width: 25.6%;
+        width: 27%;
         height: 293px;
     }
     .home-imgListLogement {
@@ -34,18 +26,14 @@
     .home-display h5 {
         max-width: 194px;
         font-size: 14px;
-
     }
 }
 @media screen and (max-width: 1340px) {
     .home-display a::before {
-        height: 247px;
-    }
-    .home-display a {
-        width: 29%;
+        height: 270px;
     }
     .home-imgListLogement {
-        height: 248px;
+        height: 270px;
     }
     .home-display h5 {
         font-size: 13px;
@@ -56,17 +44,18 @@
 /**************Version Tablette (1279px)**************/
 
 @media screen and (max-width: 1279px) {
-    .section-listAppartement ul {
-        padding: 2%;
+    .home-display {
+        width: 48%;
+    }
+    .section-listAppartement {
+        padding: 1% 3%;
     }
     .home-display a::before {
-        width: 39.7%;
-    }
-    .home-display a {
-        width: 46%;
+        width: 40.6%;
+        height: 310px;
     }
     .home-imgListLogement {
-        height: 248px;
+        height: 310px;
     }
     .home-display h5 {
         font-size: 16px;
@@ -79,16 +68,18 @@
         max-width: 190px;
     }
 }
+@media screen and (max-width:890px) {
+    .home-imgListLogement {
+        height: 256px;
+    }
+    .home-display a::before {
+        height: 256px;
+    }
+}
 @media screen and (max-width:968px) {
     .home-display h5 {
         font-size: 12px;
         max-width: 168px;
-    }
-}
-@media screen and (max-width:829px){
-
-    .home-display a::before{
-        width: 39.7%;
     }
 }
 
@@ -100,15 +91,12 @@
         padding: 0;
     }
     .section-listAppartement ul {
-        padding: 0;
+        margin: 0;
+        flex-direction: column;
     }
     .home-display {
-        flex-direction: column;
-        padding: 0;
-    }    
-    .home-display a {
         width: 100%;
-        margin: 0px 0px 40px 0px;
+        margin: 3% 0;
     }
     .home-display a::before {
         width: 90%;
@@ -145,10 +133,10 @@
 
 @media screen and (max-width:390px) {
     .home-display a::before {
-        height: 210px;
+        height: 240px;
     }
     .home-imgListLogement {
-        height: 210px;
+        height: 240px;
     }
     .home-display h5 {
         font-size: 12px;
