--- a/src/Styles/NavBar/navBar.css
+++ b/src/Styles/NavBar/navBar.css
@@ -1,10 +1,13 @@
-.pageDetails-navBar div {
-    width: 47%;
+.pageDetails-navBar div, .section-navBar div {
     background: #F6F6F6;
     border-radius: 10px;
+    margin-bottom: 30px;
+}
+.pageDetails-navBar div {
+    width: 47%;
 }
 
-.pageDetails-navBar button {
+.navBar-open, .navBar-close {
     background: #FF6060;
     border: none;
     border-radius: 10px;
@@ -13,17 +16,30 @@
     font-size: 20px;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     padding: 15px 22px 15px 28px;
 }
+.navBar-close svg {
+    width: 2em;
+    height: 2em;
+}
+.navBar-open svg {
+    width: 2em;
+    height: 2em;
+}
+.section-navBar .close {
+    width: 100%;
+    margin-bottom: 30px;
+}
 
-.pageDetails-navBar p, ul {
+.navBar p, ul {
     margin: 0;
     padding: 30px 25px;
     color: #FF6060;
     font-size: 20px;
 }
 
-.pageDetails-navBar li {
+.navBar li {
     padding: 2px;
     font-size: 20px;
 }
@@ -34,4 +50,11 @@
 
 .navBar-close{
     width: 47%;
+}
+
+.pageDetails-navBar {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    margin-top: 30px;
 }
