--- a/src/Styles/CardDetails/cardDetails-responsive.css
+++ b/src/Styles/CardDetails/cardDetails-responsive.css
@@ -5,11 +5,11 @@
         height: 512px;
     }
     .carrousel-button {
-        top: 212px
+        top: 22rem
     }
     .carrousel-button svg {
-        width: 10.5em;
-        height: 15em;
+        width: 4em;
+        height: 9em;
     }
     .pageDetails-carrousel figcaption {
         top: 39em;
@@ -36,11 +36,11 @@
         top: 34.5em;
     }
     .carrousel-button {
-        top: 186px;
+        top: 20rem;
     }
     .carrousel-button svg {
-        width: 8.5em;
-        height: 13em;
+        width: 3em;
+        height: 8em;
     }
     .pageDetails-informations h1 {
         font-size: 25px;
@@ -60,7 +60,7 @@
         top: 32em;
     }
     .carrousel-button {
-        top: 200px;
+        top: 19rem;
     }
     .pageDetails-flexStars {
         display: block;
@@ -98,11 +98,11 @@
 }
 @media screen and (max-width: 930px) {
     .carrousel-button {
-        top: 190px;
+        top: 17rem;
     }
     .carrousel-button svg {
-        width: 6.5em;
-        height: 10em;
+        width: 2em;
+        height: 7em;
     }
     .pageDetails-informations h1 {
         font-size: 26px;
@@ -123,14 +123,10 @@
         height: 390px;
     }
     .carrousel-button {
-        top: 167px;
+        top: 13rem;
     }
     .pageDetails-carrousel figcaption {
         top: 25em;
-    }
-    .carrousel-button svg {
-        width: 5.5em;
-        height: 10em;
     }
 }
 @media screen and (max-width:550px) {
@@ -141,11 +137,7 @@
         top: 22em;
     }
     .carrousel-button {
-        top: 140px;
-    }
-    .carrousel-button svg {
-        width: 4em;
-        height: 10em;
+        top: 12rem;
     }
     .pageDetails-informations h1 {
         font-size: 20px;
@@ -176,7 +168,7 @@
         top: 20em;
     }
     .carrousel-button {
-        top: 110px;
+        top: 10rem;
     }
     .pageDetails-rating {
         margin-top: -3rem;
@@ -190,6 +182,10 @@
 @media screen and (max-width:450px) {
     .carrousel-image {
         height: 270px;
+    }
+    .carrousel-button svg {
+        width: 1.5rem;
+        height: 6.5rem;
     }
     .pageDetails-carrousel figcaption {
         display: none;
@@ -234,6 +230,18 @@
         height: 1.3em;
     }
 }
+@media screen and (max-width:360px) {
+    .carrousel-image {
+        height: 226px;
+    }
+    .carrousel-button {
+        top: 7.5rem;
+    }
+    .carrousel-button svg {
+        width: 1rem;
+        height: 6rem;
+    }
+}
 @media screen and (max-width:343px) {
     .pageDetails-host img {
         width: 18%
@@ -241,10 +249,10 @@
 }
 @media screen and (max-width:304px) {
     .carrousel-image {
-        height: 200px;
+        height: 190px;
     }
     .carrousel-button {
-        top: 60px;
+        top: 6rem;
     }
     .pageDetails-host h3 {
         width: 27%;
